working on mobile view issues

--- a/frontend/src/components/About/about.css
+++ b/frontend/src/components/About/about.css
@@ -1,35 +1,70 @@
-.blurred-background {
+:root {
+  --color-first: #CFA968;
+  --color-second: #CFA968;
+  --color-light: #F4F4F4;
+  --color-fontlight: #fff;
+  --color-fontdark: #1d2127;
+  --font-title: "Open Sans";
+  --font-title-weight: 400;
+  --font-title-italic: normal;
+  --font-title-case: none;
+  --font-title-spacing: 0;
+  --font-content: "Open Sans";
+  --font-content-weight: 400;
+  --font-content-italic: normal;
+  --font-bodysize: 15px;
+  --font-rate: 3;
+}
+
+body {
+  font-family: var(--font-content);
+  font-size: var(--font-bodysize);
+  font-weight: var(--font-content-weight);
+  font-style: var(--font-content-italic);
+  color: var(--color-fontdark);
+  line-height: 1.5;
+  box-sizing: inherit;
+  margin: 0;
+  border: 0;
+  -webkit-font-smoothing: antialiased;
+  vertical-align: baseline;
+  display: block;
   position: relative;
-  overflow: hidden;
-}
-
-.blurred-background::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: url('./src/Images/Swiper/nailart3.jpg') center/cover no-repeat;
-  filter: blur(10px);
-  z-index: -1;
-}
-
-.description {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff; /* Adjust text color for better visibility on the blurred background */
+  z-index: 1;
+  width: 100%;
   text-align: center;
 }
-.img-fluid{
-  max-width: 30vh;
-  height: auto;
-  padding: 10px;
-  border-radius: 5%;
+
+.padding-70 {
+  padding: 70px 0;
 }
-.desc{
-  max-width: 70vw;
-  padding: 40px;
+
+.border-solid {
+  border-style: solid;
+}
+
+.align-center {
+  text-align: center;
+}
+.h-layout {
+  display: flex;
+  flex-direction: column;
+}
+
+.h-row {
+  display: flex;
+}
+
+.h-col {
+  flex: 1;
+  box-sizing: border-box;
+}
+@media (max-width: 576px) {
+  .container{
+    width: 90vw;
+  }
+  .basic {
+  display: flex;
+  flex-direction: column;
+  }
 }
