--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -1,24 +1,35 @@
-.bg-body-tertiary{
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    position: sticky; 
-    top:0;
-    z-index: 9000;
-    height: 100px;
+.bg-body-tertiary {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  height: auto; /* Change height to auto */
 }
-.header-booking{
+  
+  .header-booking {
     text-align: center;
-    background-color: #F9A2A2;
+    background-color: #f9a2a2;
     width: 100%;
-    padding:5px
-}
-@media screen and (max-width: 768px){
-    
-}
-.navbar{
-    --bs-navbar-padding-y: 0rem;
-}
-.Container{
-    padding:0px;
-}
+    padding: 5px;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .navbar {
+      --bs-navbar-padding-y: 0rem;
+    }
+  
+    .container-fluid {
+      padding: 0px;
+    }
+  
+    .navbar-collapse {
+      z-index: 1000; /* Adjust the value as needed */
+    }
+    .navbar {
+      --bs-navbar-padding-y: 0rem;
+    }
+  }
+  .content-container {
+    padding-top: 150px; /* Adjust based on the navbar height */
+  }
