--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,7 @@
-
+body{
+    margin :10px;
+    width:90%;
+    margin-left: auto;
+    margin-right: auto;
+}
   
